--- a/templates/game.html
+++ b/templates/game.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h3>Player: {{ thisPlayer }}</h3>
+    <h3 id="me">Player: {{ thisPlayer }}</h3>
     <div id="handDiv">
         <p id="handContainer"><b>Your hand:</b> <span id="hand">{{ hand }}</span></p>
     </div>
@@ -17,7 +17,7 @@
         {% endfor %}
     </div>
     <p>Game Log:</p>
-    <div id="log" style="overflow: scroll; width: 100%; height: 50%;">
+    <div id="log" style="overflow: scroll; width: 100%; height: 50%; position: fixed; border: 1px solid black; padding: 0px 8px; border-radius: 4px;">
         
     </div>
 </body>
@@ -32,6 +32,7 @@
     const urlParts = window.location.href.split('/');
     const oldId = urlParts.pop() || urlParts.pop();
     let turn = '';
+    let relationship = '';
 
     // log function that adds a message to the log div
     function log(message) {
@@ -65,21 +66,39 @@
     socket.on('turn', function (data) {
         // remove the askterisk from the player who's turn it was if it wasn't me
         if (turn != socket.id && turn != '') {
-            $('#' + turn).text($('#' + turn).text().replace(' *', ''));
+            $('#' + turn).html($('#' + turn).html().replace(' *', ''));
         }
 
         turn = data.sid;
 
-        // if it's not my turn, put an asterisk next to the player who's turn it is
-        if (socket.id != turn) {
+        // if it's not my turn, put an asterisk next to the player who's turn it is and remove the one next to me
+        if (turn != socket.id) {
             $('#' + turn).append(' *');
+            $('#me').text($('#me').text().replace(' *', ''));
         }
 
         // if it's my turn, add buttons next to other players' names that say "ask"
-        if (socket.id == turn) {
-            $('.player').each(function () {
-                $(this).append(' <button id="askout' + $(this).attr('id') + '" class="askout">Ask on a date</button>');
-            });
+        if (turn == socket.id) {
+            // Add an asterisk next to my name
+            $('#me').append(' *');
+            if (relationship.length > 0) {
+                // Change the relationship message to say awaiting trust card
+                $('#relationship').text('Awaiting trust card');
+            } else {
+                $('.player').each(function () {
+                    $(this).append(' <button id="askout' + $(this).attr('id') + '" class="askout">Ask on a date</button>');
+                });
+            }
+        } else if (turn == relationship) {
+            // add a trust card selection under the hand div
+            $('#handDiv').append('<p class="trust">Select a trust card: </p>');
+            // retrieve my hand as a list
+            const hand = $('#hand').text().split(', ');
+            const uniqueHand = [...new Set(hand)];
+            // add a button for each trust card
+            for (let i = 0; i < uniqueHand.length; i++) {
+                $('#handDiv').append('<button id="trustcard' + uniqueHand[i] + '" class="trust ' + relationship + '">' + uniqueHand[i] + '</button>');
+            }
         }
 
         log(data.log);
@@ -149,7 +168,7 @@
     });
 
     // when a trust card button is clicked, emit a trust exchange message
-    $(document).on('click', '.trust', function () {
+    $(document).on('click', 'button.trust', function () {
         // get the target
         const target = $(this).attr('class').split(' ')[1];
         socket.emit('trust exchange', { 'card': $(this).text(), 'target': target });
@@ -159,7 +178,7 @@
         let hand = $('#hand').text().split(', ');
         delete hand[hand.indexOf($(this).text())];
         hand = hand.filter(e => e);
-        $("#hand").text(hand.join(', '));
+        $('#hand').text(hand.join(', '));
         // remove the trust card buttons
         $('.trust').remove();
         return false;
@@ -178,9 +197,16 @@
         if (data['target'] == socket.id) {
             // Add a p right after handContainer saying what trust card I received
             $('#handContainer').after('<p id="trustHand">Trust card: ' + data['card'] + '</p>');
+            if (data['origin'] == relationship && turn == socket.id) {
+                // Remove the relationship message
+                $('#relationship').remove();
+                // Add two buttons next to the relationship saying "ghost" and "follow through"
+                $('#' + relationship).append(' <button id="ghost' + relationship + '" class="ghost">Ghost</button>');
+                $('#' + relationship).append(' <button id="followthrough' + relationship + '" class="followthrough">Follow through</button>');
+            }
         }
 
-        if (turn == socket.id && $("#trustHand").length > 0 && $(".trust").length == 0) {
+        if (turn == socket.id && $("#trustHand").length > 0 && $(".trust").length == 0 && $(".ghost").length == 0) {
             // Trust cards have been exchanged
             const so = data['target'] == socket.id ? data['origin'] : data['target'];
             // Add buttons next to so saying "ask on a second date" and "no second date"
@@ -261,9 +287,10 @@
             const so = $(this).attr('id').replace('acceptsecond', '');
             // add a date accepted message next to the player who's second date I just accepted
             $('#' + so).append('<span id="relationship"> In a relationship</span>');
+            relationship = so;
             // Get the value of the trust card
             const trust = $('#trustHand').text().replace('Trust card: ', '');
-            socket.emit('accept second date', { 'target': so, 'card': trust });
+            socket.emit('accept second date', { 'target': so });
             // Add the trust card to the hand
             $('#hand').append(', ' + trust);
         } else {
@@ -287,13 +314,14 @@
         if (data.target == socket.id) {
             // add a date accepted message next to the player who accepted my second date invite
             $('#' + data.origin).append('<span id="relationship"> In a relationship</span>');
-                // Get the value of the trust card
-                const trust = $('#trustHand').text().replace('Trust card: ', '');
-                // Add the trust card to the hand
-                $('#hand').append(', ' + trust);
-                // Remove the trustHand and accepted
-                $('#trustHand').remove();
-                $('#accepted').remove();
+            relationship = data.origin;
+            // Get the value of the trust card
+            const trust = $('#trustHand').text().replace('Trust card: ', '');
+            // Add the trust card to the hand
+            $('#hand').append(', ' + trust);
+            // Remove the trustHand and accepted
+            $('#trustHand').remove();
+            $('#accepted').remove();
         }
 
         log(data.log);
@@ -313,6 +341,63 @@
             $('#accepted').remove();
         }
 
+        log(data.log);
+    });
+
+    // when a ghost button is clicked
+    $(document).on('click', '.ghost', function () {
+        // get the trust card
+        const trust = $('#trustHand').text().replace('Trust card: ', '');
+        // emit a ghost message
+        socket.emit('ghost', { 'target': relationship });
+        relationship = '';
+        // Add the trust card to the hand
+        $('#hand').append(', ' + trust);
+        // Remove the trustHand
+        $('#trustHand').remove();
+        // remove the buttons
+        $('.ghost').remove();
+        $('.followthrough').remove();
+        // remove the relationship
+        $('#relationship').remove();
+        return false;
+    });
+
+    // when a follow through button is clicked
+    $(document).on('click', '.followthrough', function () {
+        // get the trust card
+        const trust = $('#trustHand').text().replace('Trust card: ', '');
+        // emit a follow through message
+        socket.emit('follow through', { 'target': relationship });
+        // Show the trust card selection buttons
+        // add a trust card selection under the hand div
+        $('#handDiv').append('<p class="trust">Select a trust card: </p>');
+        // retrieve my hand as a list
+        const hand = $('#hand').text().split(', ');
+        const uniqueHand = [...new Set(hand)];
+        // add a button for each trust card
+        for (let i = 0; i < uniqueHand.length; i++) {
+            $('#handDiv').append('<button id="trustcard' + uniqueHand[i] + '" class="trust ' + relationship + '">' + uniqueHand[i] + '</button>');
+        }
+
+        // remove the buttons
+        $('.ghost').remove();
+        $('.followthrough').remove();
+        return false;
+    });
+
+    // when I get a ghost message, remove the relationship span
+    socket.on('ghost', function (data) {
+        if (data.target == socket.id) {
+            $('#relationship').remove();
+            relationship = '';
+        }
+
+        log(data.log);
+    });
+
+    // when I get a follow through message, log
+    socket.on('follow through', function (data) {
         log(data.log);
     });
 
