--- a/templates/waiting.html
+++ b/templates/waiting.html
@@ -15,9 +15,9 @@
     <button id="ready">Ready</button>
 </body>
 
-<script src={{ url_for('static', filename='jquery.min.js' ) }}></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
 <!-- Socket.IO for communication with the server -->
-<script src={{ url_for('static', filename='socket.io.min.js' ) }}></script>
+<script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
 
 <script>
     // Connect to the socket.io server
